--- a/_02_primeraweb/src/main/resources/application.properties
+++ b/_02_primeraweb/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=_02_primeraweb
+
 #Configuraciones de la base de datos
 
-spring.datasource.url=jdbc:mysql://localhost:3306/db_01_spring_lovelace
+spring.datasource.url=jdbc:mysql://localhost:3306/db_to_do_list
 spring.datasource.username=root
 spring.datasource.password=Rlwl2023.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
